GNOME Bugzilla – Bug 689265
wacom: crash when downgrading control-center
Last modified: 2012-12-20 10:51:55 UTC
Action type comes from GSettings and may have been changed to some invalid value, causing a segmentation fault in control-center if the value is larger than the known action types. This can also occur when downgrading from a version with more possible actions.
Created attachment 230174 [details] [review] Proposed patch
Review of attachment 230174 [details] [review]: ::: panels/wacom/cc-wacom-page.c @@ +614,3 @@ + /* Sanity check */ + if (type >= G_N_ELEMENTS(action_table)) I'd rather a: type = sanity_check_action_type (type); And expand on what the code is trying to fix in the function.