wacom: check for the action type value

Action type comes from GSettings and may have been changed
to some invalid value, causing a segmentation fault in
control-center if the value is larger than the known action
types. This can also occur when downgrading from a version
with more possible actions.

Adds a sanity check to verify the given action type value
is within the bounds of the known action types.

https://bugzilla.gnome.org/show_bug.cgi?id=689265